# private-phylogenetic-analysis

./: App.py  App_theme_selector.py  LICENSE  README.md  README.txt  config.txt  install.sh  kill_process.sh  launch_app_and_server.sh
Interface_Dark_Theme/: Computing2.py  MainWindowV2.py  Multi_partyAcc.py  OptionsB.py
Interface_Light_Theme/: Computing2.py  Local.py  MainWindow.py  MainWindowV2.py  Multi_party2.py  Multi_partyAcc.py  OptionsB.py  Quantum_Secure_acc.py  Quantum_acc.py  Secure_window_acc.py  secure_window.py
Results/: Local.txt  Local3.txt  Secure2.txt  local30.txt  locl2.txt  loclaota.txt  multi.txt  multi30.txt  q.txt  quantum.txt  quantum30.txt  secure30.txt
Sequences/: Sequence_1.txt  Sequence_10.txt  Sequence_11.txt  Sequence_12.txt  Sequence_13.txt  Sequence_14.txt  Sequence_15.txt  Sequence_16.txt  Sequence_17.txt  (+90 more)
smc_engine/: App.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile_classic  qApp.cpp  qmakefile_old  qrunSMCParty.sh  runGenomeSMC  runSMCParty.sh  test_ok.cpp
smc_engine/boolCircuit/c_files_for_mainScapi/: main.c  main_div.c  main_int.c
smc_engine/include/: HamParties.hpp  HamParties_old.hpp  etsi_qkd_004.hpp  qHamParties.hpp  qHamParties_old.hpp  qmatrixDist.hpp
smc_engine/partiesFiles/: Parties  Parties_0_1  Parties_0_2  Parties_1_0  Parties_1_2
smc_engine/phylogeneticTree/: upgma_tree.nwk
smc_engine/quantum_oblivious_key_distribution/signals/: ok_bob_1.txt  ok_bob_2.txt
smc_engine/src/: HamParties.cpp  HamParties_old.cpp  guide_tree.cpp  qHamParties.cpp  qmatrixDist.cpp
(+39 files in other folders)
